--- a/index.html
+++ b/index.html
@@ -18,29 +18,40 @@
     <main class="container">
 
         <section class="balance">
-            <h2>Balanço</h2>
+            <h2 class="sr-only">Balanço</h2>
             <div class="card">
-                <h3>Entradas</h2>
-                <p>R$4.000,00</p>
+                <h3>
+                    <span>Entradas</span>
+                    <img src="./assets/income.svg" alt="Imagem de Entradas">
+                </h3>
+                <p>R$5.000,00</p>
             </div>
             <div class="card">
-                <h3>Saídas</h2>
+                <h3>
+                    <span>Saidas</span>
+                    <img src="./assets/expense.svg" alt="Imagem de Entradas">
+                </h3>
                 <p>R$2.000,00</p>
             </div>
             <div class="card total">
-                <h3>Total</h2>
+                <h3>
+                    <span>Total</span>
+                    <img src="./assets/total.svg" alt="Imagem de Entradas">
+                </h3>
                 <p>R$3.000,00</p>
             </div>
         </section>
 
         <section class="transaction">
-            <h3>Transações</h2>
+            <h3 class="sr-only">Transações</h2>
+                <a href="#" class="button new">+ Nova Transação</a>
                 <table class="dataTable">
                     <thead>
                         <tr>
                             <th>Descrição</th>
                             <th>Valor</th>
                             <th>Data</th>
+                            <th></th>
                         </tr>
                     </thead>
                     <tbody>
@@ -48,35 +59,71 @@
                             <td class="description">Luz</td>
                             <td>- R$230</td>
                             <td>05/01/2022</td>
+                            <td><img src="./assets/minus.svg" alt=""></td>
                         </tr>
                         <tr>
                             <td class="description">Água</td>
                             <td class="expense">- R$90</td>
                             <td class="date">05/01/2022</td>
+                            <td><img src="./assets/minus.svg" alt=""></td>
                         </tr>
                         <tr>
                             <td class="description">Criação Website</td>
                             <td class="income">+ R$5.000</td>
                             <td class="date">05/01/2022</td>
+                            <td><img src="./assets/minus.svg" alt=""></td>
                         </tr>
                         <tr>
                             <td>Aluguel</td>
                             <td class="expense">- R$530</td>
                             <td class="date">05/01/2022</td>
+                            <td><img src="./assets/minus.svg" alt=""></td>
                         </tr>
                     </tbody>
                 </table>
         </section>
-
-
-
     </main>
+
+    <div class="modal-overlay active">
+        <div class="modal">
+            <div class="form">
+                <h2>Nova Transação</h2>
+                <form action="">
+                    <div class="input-group">
+                        <label class="sr-only" for="description">Descrição</label>
+                        <input type="text" id="description" name="description" placeholder="Descrição">
+
+                        <div class="input-group">
+                            <label class="sr-only" for="amount">Valor</label>
+                            <input type="number" id="amount" name="amount" placeholder="0,00" step="0.01">
+
+                            <small class="help">Use o sinal - {negativo} para despesas e , {virgula} para casas
+                                decimais</small>
+                        </div>
+
+                        <div class="input-group">
+                            <label class="sr-only" for="date">Data</label>
+                            <input type="date" id="date" name="date">
+                        </div>
+                        <div class="input-group actions">
+                            <a href="" class="button cancel"> Cancelar </a>
+                            <button>Salvar</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+
 
     <footer>
         <h4>
             <p>Dev.Finances$</p>
         </h4>
     </footer>
+
+    <script src="./script.js"></script>
 </body>
 
 </html>
