--- a/index.html
+++ b/index.html
@@ -1,129 +1,111 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Dev - Finanças</title>
+
+    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&display=swap"
+        rel="stylesheet">
+
+    <title>dev.finance$</title>
 </head>
 
 <body>
-
     <header>
-        <h1>Dev.Finances$</h1>
+        <img src="./assets/logo.svg" alt="Logo Dev Finance">
     </header>
 
     <main class="container">
-
-        <section class="balance">
+        <section id="balance">
             <h2 class="sr-only">Balanço</h2>
+
             <div class="card">
                 <h3>
                     <span>Entradas</span>
-                    <img src="./assets/income.svg" alt="Imagem de Entradas">
+                    <img src="./assets/income.svg" alt="Imagem de entradas">
                 </h3>
-                <p>R$5.000,00</p>
+                <p id="incomeDisplay">R$ 0,00</p>
             </div>
+
             <div class="card">
                 <h3>
-                    <span>Saidas</span>
-                    <img src="./assets/expense.svg" alt="Imagem de Entradas">
+                    <span>Saídas</span>
+                    <img src="./assets/expense.svg" alt="Imagem de saídas">
                 </h3>
-                <p>R$2.000,00</p>
+                <p id="outgoingDisplay">R$ 0,00</p>
             </div>
+
             <div class="card total">
                 <h3>
                     <span>Total</span>
-                    <img src="./assets/total.svg" alt="Imagem de Entradas">
+                    <img src="./assets/total.svg" alt="Imagem do total">
                 </h3>
-                <p>R$3.000,00</p>
+                <p id="totalDisplay">R$ 0,00</p>
             </div>
         </section>
 
-        <section class="transaction">
-            <h3 class="sr-only">Transações</h2>
-                <a href="#" class="button new">+ Nova Transação</a>
-                <table class="dataTable">
-                    <thead>
-                        <tr>
-                            <th>Descrição</th>
-                            <th>Valor</th>
-                            <th>Data</th>
-                            <th></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td class="description">Luz</td>
-                            <td>- R$230</td>
-                            <td>05/01/2022</td>
-                            <td><img src="./assets/minus.svg" alt=""></td>
-                        </tr>
-                        <tr>
-                            <td class="description">Água</td>
-                            <td class="expense">- R$90</td>
-                            <td class="date">05/01/2022</td>
-                            <td><img src="./assets/minus.svg" alt=""></td>
-                        </tr>
-                        <tr>
-                            <td class="description">Criação Website</td>
-                            <td class="income">+ R$5.000</td>
-                            <td class="date">05/01/2022</td>
-                            <td><img src="./assets/minus.svg" alt=""></td>
-                        </tr>
-                        <tr>
-                            <td>Aluguel</td>
-                            <td class="expense">- R$530</td>
-                            <td class="date">05/01/2022</td>
-                            <td><img src="./assets/minus.svg" alt=""></td>
-                        </tr>
-                    </tbody>
-                </table>
+        <section id="transaction">
+            <h2 class="sr-only">Transações</h2>
+
+            <a href="#" class="button new" onclick="modal()">+ Nova Transação</a>
+
+            <table id="data-table">
+                <thead>
+                    <tr>
+                        <th>Descrição</th>
+                        <th>Valor</th>
+                        <th>Data</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
         </section>
     </main>
 
-    <div class="modal-overlay active">
+    <footer>
+        <p>dev.finance$</p>
+    </footer>
+
+    <div class="modal-overlay">
         <div class="modal">
-            <div class="form">
+            <div id="form">
                 <h2>Nova Transação</h2>
-                <form action="">
+                <form action="" onsubmit="Form.submit(event)">
                     <div class="input-group">
-                        <label class="sr-only" for="description">Descrição</label>
-                        <input type="text" id="description" name="description" placeholder="Descrição">
+                        <input aria-label="Descrição" type="text" name="description" id="description"
+                            placeholder="Descrição">
+                    </div>
 
-                        <div class="input-group">
-                            <label class="sr-only" for="amount">Valor</label>
-                            <input type="number" id="amount" name="amount" placeholder="0,00" step="0.01">
+                    <div class="input-group">
+                        <label class="sr-only" for="amount">Valor</label>
+                        <input aria-labelledby="amount helper" type="number" name="amount" id="amount" step="0.10"
+                            placeholder="0,00">
+                        <small class="help" id="helper">Use o sinal - (negativo) para despesas e . (ponto) para casas
+                            decimais</small>
+                    </div>
 
-                            <small class="help">Use o sinal - {negativo} para despesas e , {virgula} para casas
-                                decimais</small>
-                        </div>
+                    <div class="input-group">
+                        <input aria-label="Data" type="date" name="date" id="date">
+                    </div>
 
-                        <div class="input-group">
-                            <label class="sr-only" for="date">Data</label>
-                            <input type="date" id="date" name="date">
-                        </div>
-                        <div class="input-group actions">
-                            <a href="" class="button cancel"> Cancelar </a>
-                            <button>Salvar</button>
-                        </div>
+                    <div class="input-group actions">
+                        <a href="#" class="button cancel" onclick="modal()">Cancelar</a>
+                        <button class="save" type="submit">Salvar</button>
                     </div>
                 </form>
             </div>
         </div>
     </div>
 
-
-
-    <footer>
-        <h4>
-            <p>Dev.Finances$</p>
-        </h4>
-    </footer>
-
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
